Second Commit, added delete functionality and also changed the default mapping to go to a sample form page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html>
 <body>
-Fuck College!!! You Cunt
+
+<form action="/createUsers">
+    Username:<br>
+    <input type="text" name="username" value="">
+    <br>
+    <br><br>
+    <input type="submit" value="Register">
+</form>
+
+<p>Click Register to register on the ForexFighter website </p>
+
 </body>
 </html>
