Have a user being added to the database via a form being submitted

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<form action="/createUsers">
+<form action="/createUsers" method = "POST" >
     Username:<br>
     <input type="text" name="username" value="">
     <br>
