Login functionality added, User object altered to contain boolean isLoggedIn flag

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,29 +11,51 @@
         <tr>
             <td align = "center" colspan="2"><strong>Register to Join ForexFighter</strong></td>
         </tr>
-            <tr>
-                <td align='left'>First Name: <td><input type='text' align = "right" name='firstName'></td></td>
-            </tr>
-            <tr>
-                <td align='left'>Second Name: <td><input type='text' align = "right" name='lastName'></td></td>
-            </tr>
-            <tr>
-                <td align='left'>Username: <td><input type='text' name='username'></td></td>
-            </tr>
-            <tr>
-                <td align='left'>Email: <td><input type='text' name='email'></td></td>
-            </tr>
-            <tr>
-                <td align='left'>Password: <td><input type='password' name='password'></td></td>
-            </tr>
-            <tr>
-                <td align='left'>Repeat Password: <td><input type='password' name='password2'></td></td>
-           </tr>
-            <tr>
-                <td align='center' colspan="2"><input type='submit' name='REGISTER' value="Register"></td>
-            </tr>
+        <tr>
+            <td align='left'>First Name: <td><input type='text' align = "right" name='firstName'></td></td>
+        </tr>
+        <tr>
+            <td align='left'>Second Name: <td><input type='text' align = "right" name='lastName'></td></td>
+        </tr>
+        <tr>
+            <td align='left'>Username: <td><input type='text' name='username'></td></td>
+        </tr>
+        <tr>
+            <td align='left'>Email: <td><input type='text' name='email'></td></td>
+        </tr>
+        <tr>
+            <td align='left'>Password: <td><input type='password' name='password'></td></td>
+        </tr>
+        <tr>
+            <td align='left'>Repeat Password: <td><input type='password' name='password2'></td></td>
+        </tr>
+        <tr>
+            <td align='center' colspan="2"><input type='submit' name='Register' value="Register"></td>
+        </tr>
     </form>
 </table>
+
+<table border='1' width='280px' cellpadding='2' cellspacing='2' align='left'>
+    <form action="/login" method = "POST" >
+        <tr>
+            <td align = "center" colspan="2"><strong>Login</strong></td>
+        </tr>
+
+        <tr>
+            <td align='left'>Username: <td><input type='text' name='username'></td></td>
+        </tr>
+
+        <tr>
+            <td align='left'>Password: <td><input type='password' name='password'></td></td>
+        </tr>
+
+        <tr>
+            <td align='center' colspan="2"><input type='submit' name='login' value="Login"></td>
+        </tr>
+    </form>
+</table>
+
+
 
 </body>
 </html>
