Redirect page added, that allows user to go to a different page.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body bgcolor="aqua">
 
 
 
@@ -55,6 +55,19 @@
     </form>
 </table>
 
+
+
+<table border='1' width='280px' cellpadding='2' cellspacing='2' align='left'>
+    <form action="/onlineUsers" method = "POST" >
+        <tr>
+            <td align = "center" colspan="2"><strong>See who's online now</strong></td>
+        </tr>
+
+        <tr>
+            <td align='center' colspan="2"><input type='submit' name='onlineUsers' value="Who's Ready To play!"></td>
+        </tr>
+    </form>
+</table>
 
 
 </body>
