--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,39 +35,36 @@
     <script src="resources/js/controllers/HomeController.js"></script>
     <script src="resources/js/controllers/LoginController.js"></script>
     <script src="resources/js/controllers/RegisterController.js"></script>
+    <script src="resources/js/controllers/WelcomeController.js"></script>
 
 </head>
-
-
-
-<!--<navbar></navbar>-->
+<navbar></navbar>
 <ui-view></ui-view>
 
-<!-- Navbar -->
-<!--<nav class="navbar navbar-inverse navbar-fixed-top" id="my-navbar">-->
-    <!--<div class="container">-->
-        <!--<div class="navbar-header">-->
-            <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">-->
-                <!--<span class="icon-bar"></span>-->
-                <!--<span class="icon-bar"></span>-->
-                <!--<span class="icon-bar"></span>-->
-            <!--</button>-->
+<nav class="navbar navbar-inverse navbar-fixed-top" id="my-navbar">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
 
-            <!--<a href="" class="navbar-brand">ForexFighter</a>-->
-        <!--</div>&lt;!&ndash; Navbar Header&ndash;&gt;-->
-        <!--<div class="collapse navbar-collapse" id="navbar-collapse">-->
+            <a href="" class="navbar-brand">ForexFighter</a>
+        </div><!-- Navbar Header-->
+        <div class="collapse navbar-collapse" id="navbar-collapse">
 
-            <!--<a href="http://google.com" class="btn btn-warning navbar-btn navbar-right">Enter</a>-->
-            <!--<ul class="nav navbar-nav">-->
-                <!--<li><a href="#">One</a>-->
-                <!--<li><a href="#">two</a>-->
-                <!--<li><a href="#">three</a>-->
-                <!--<li><a href="#">four</a>-->
-                <!--<li><a href="#">five</a>-->
-            <!--</ul>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</nav>&lt;!&ndash; End navbar &ndash;&gt;-->
+            <a href="http://google.com" class="btn btn-warning navbar-btn navbar-right">Enter</a>
+            <ul class="nav navbar-nav">
+                <li><a href="#">Login</a>
+                <li><a href="#">Register</a>
+                <li><a href="#">three</a>
+                <li><a href="#">four</a>
+                <li><a href="#">five</a>
+            </ul>
+        </div>
+    </div>
+</nav><!-- End navbar -->
 
 <br /><br />
 
