Grunt Up and running

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,8 +13,7 @@
 
 
 
-    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
-    <script src = "resources/js/js.js"></script>
+
 
 
     <link rel='stylesheet' href='node_modules/bootstrap/dist/css/bootstrap.css'>
@@ -31,11 +30,13 @@
     <script src="node_modules/angular-chart.js/dist/angular-chart.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 
-    <script src="resources/js/app.js"></script>
-    <script src="resources/js/controllers/HomeController.js"></script>
-    <script src="resources/js/controllers/LoginController.js"></script>
-    <script src="resources/js/controllers/RegisterController.js"></script>
-    <script src="resources/js/controllers/WelcomeController.js"></script>
+    <!--<script src="resources/js/app.js"></script>-->
+    <!--<script src="resources/js/controllers/HomeController.js"></script>-->
+    <!--<script src="resources/js/controllers/LoginController.js"></script>-->
+    <!--<script src="resources/js/controllers/RegisterController.js"></script>-->
+    <!--<script src="resources/js/controllers/WelcomeController.js"></script>-->
+    <link rel="stylesheet" type="text/css" href="build/css/generatedStyles.scss">
+    <script src = "build/js/generatedScripts.js"></script>
 
 </head>
 <navbar></navbar>
