--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,8 +13,7 @@
 
 
 
-    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
-    <script src = "resources/js/js.js"></script>
+
 
 
     <link rel='stylesheet' href='node_modules/bootstrap/dist/css/bootstrap.css'>
@@ -31,14 +30,15 @@
     <script src="node_modules/angular-chart.js/dist/angular-chart.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 
-    <script src="resources/js/app.js"></script>
-    <script src="resources/js/controllers/HomeController.js"></script>
-    <script src="resources/js/controllers/LoginController.js"></script>
-    <script src="resources/js/controllers/RegisterController.js"></script>
-    <script src="resources/js/controllers/WelcomeController.js"></script>
+
+
+    <link rel="stylesheet" type="text/css" href="build/css/generatedStyles.scss">
+    <script src = "build/js/generatedScripts.js"></script>
+
 
 </head>
-<navbar></navbar>
+
+<!--<navbar></navbar>-->
 <ui-view></ui-view>
 
 <nav class="navbar navbar-inverse navbar-fixed-top" id="my-navbar">
@@ -56,11 +56,11 @@
 
             <a href="http://google.com" class="btn btn-warning navbar-btn navbar-right">Enter</a>
             <ul class="nav navbar-nav">
-                <li><a href="#">Login</a>
-                <li><a href="#">Register</a>
+                <li><a ng-href="#/login">Login</a>
+                <li><a ng-href="#/register">Register</a>
                 <li><a href="#">three</a>
                 <li><a href="#">four</a>
-                <li><a href="#">five</a>
+                <li><a ng-href="#/welcome">Welcome Page</a>
             </ul>
         </div>
     </div>
@@ -68,93 +68,6 @@
 
 <br /><br />
 
-<!--<div class="container">-->
-    <!--<div class="row">-->
-        <!--<div class="col-md-6 col-md-offset-3">-->
-            <!--<div class="panel panel-login">-->
-                <!--<div class="panel-heading">-->
-                    <!--<div class="row">-->
-                        <!--<div class="col-xs-6">-->
-                            <!--<a href="#" class="active" id="login-form-link">Login</a>-->
-                        <!--</div>-->
-                        <!--<div class="col-xs-6">-->
-                            <!--<a href="#" id="register-form-link">Register</a>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<hr>-->
-                <!--</div>-->
-                <!--<div class="panel-body">-->
-                    <!--<div class="row">-->
-                        <!--<div class="col-lg-12">-->
-
-
-                            <!--<form id="login-form"  role="form" style="display: block;">-->
-
-                                <!--<div class="form-group">-->
-                                    <!--<input type="text" ng-model="login.username" name="username" id="username" tabindex="1" class="form-control" placeholder="Username">-->
-                                <!--</div>-->
-                                <!--<div class="form-group">-->
-                                    <!--<input type="password" ng-model="login.password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">-->
-                                <!--</div>-->
-                                <!--<div class="form-group text-center">-->
-                                    <!--<input type="checkbox" tabindex="3" class="" name="remember" id="remember">-->
-                                    <!--<label for="remember"> Remember Me</label>-->
-                                <!--</div>-->
-
-                                <!--<div class="form-group">-->
-                                    <!--<div class="row">-->
-
-                                        <!--<div class="col-sm-6 col-sm-offset-3">-->
-                                            <!--<input type="submit" ng-click="login()" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">-->
-                                        <!--</div>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</form>-->
-
-
-                            <!--<form id="register-form" role="form" style="display: none;">-->
-
-                                <!--<div class="form-group">-->
-                                    <!--<input type="text" ng-model="register.firstName" name="firstName" id="firstName" tabindex="1" class="form-control" placeholder="First Name" value="">-->
-                                <!--</div>-->
-
-                                <!--<div class="form-group">-->
-                                    <!--<input type="text" ng-model="register.lastName"name="lastName" id="lastName" tabindex="1" class="form-control" placeholder="Second Name" value="">-->
-                                <!--</div>-->
-
-                                <!--<div class="form-group">-->
-                                    <!--<input type="text" ng-model="register.username" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">-->
-                                <!--</div>-->
-
-                                <!--<div class="form-group">-->
-                                    <!--<input type="email" ng-model="register.email" name="emailAdd" id="emailAdd" tabindex="1" class="form-control" placeholder="Email Address" value="">-->
-                                <!--</div>-->
-
-                                <!--<div class="form-group">-->
-                                    <!--<input type="password" ng-model="register.password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">-->
-                                <!--</div>-->
-
-                                <!--<div class="form-group">-->
-                                    <!--<input type="password" ng-model="register.confirmPassword" name="confirmPassword" id="confirmPassword" tabindex="2" class="form-control" placeholder="Confirm Password">-->
-                                <!--</div>-->
-
-                                <!--<div class="form-group">-->
-                                    <!--<div class="row">-->
-                                        <!--<div class="col-sm-6 col-sm-offset-3">-->
-                                            <!--<input type="submit" ng-click="register()" name="register" id="register" tabindex="4" class="form-control btn btn-register" value="Register Now">-->
-                                        <!--</div>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</form>-->
-
-
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
 
 
 
