--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -58,8 +58,8 @@
             <ul class="nav navbar-nav">
                 <li><a ng-href="#/login">Login</a>
                 <li><a ng-href="#/register">Register</a>
-                <li><a href="#">three</a>
-                <li><a href="#">four</a>
+                <li><a ng-href="#/allUsers">All Users</a>
+                <li><a ng-href="#/online">See Who's Online</a>
                 <li><a ng-href="#/welcome">Welcome Page</a>
             </ul>
         </div>
