accessing cookies via coockieStore.get('user')

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,31 +41,7 @@
 <!--<navbar></navbar>-->
 <ui-view></ui-view>
 
-<nav class="navbar navbar-inverse navbar-fixed-top" id="my-navbar">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-
-            <a href="" class="navbar-brand">ForexFighter</a>
-        </div><!-- Navbar Header-->
-        <div class="collapse navbar-collapse" id="navbar-collapse">
-
-            <a href="http://google.com" class="btn btn-warning navbar-btn navbar-right">Enter</a>
-            <ul class="nav navbar-nav">
-                <li><a ng-href="#/login">Login</a>
-                <li><a ng-href="#/register">Register</a>
-                <li><a ng-href="#/allUsers">All Users</a>
-                <li><a ng-href="#/online">See Who's Online</a>
-                <li><a ng-href="#/welcome">Welcome Page</a>
-            </ul>
-        </div>
-    </div>
-</nav><!-- End navbar -->
-
+<header></header>
 <br /><br />
 
 <!--<div class="container">-->
