Renaming navbar related files

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,7 +41,7 @@
 <!--<navbar></navbar>-->
 <ui-view></ui-view>
 
-<header></header>
+<navheader></navheader>
 <br /><br />
 
 <!--<div class="container">-->
