--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,15 +15,19 @@
     <link rel='stylesheet' href='node_modules/font-awesome/css/font-awesome.min.css'>
     <!--<link rel="stylesheet" href="node_modules/device-mockups/device-mockups.min.css">-->
     <link rel="stylesheet" href="node_modules/simple-line-icons/css/simple-line-icons.css">
+    <link rel="stylesheet" href="node_modules/angular-material/angular-material.css">
     <script src="node_modules/lodash/lodash.min.js"></script>
     <script src="node_modules/angular/angular.js" ></script>
-    <script src="node_modules/angular-cookies/angular-cookies.js"></script>
-    <script src="node_modules/angular-route/angular-route.js"></script>
     <script src="node_modules/angular-sanitize/angular-sanitize.min.js"></script>
-    <script src="node_modules/chart.js/dist/Chart.js"></script>
+    <script src="node_modules/angular-route/angular-route.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="node_modules/chart.js/dist/Chart.js"></script>
     <script src="node_modules/angular-chart.js/dist/angular-chart.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="node_modules/angular-cookies/angular-cookies.js"></script>
+    <script src="node_modules/angular-aria/angular-aria.js" ></script>
+    <script src="node_modules/angular-animate/angular-animate.js" ></script>
+    <script src="node_modules/angular-material/angular-material.js" ></script>
 
 
 
