--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,8 @@
     <title>ForexFighter</title>
 
 
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <!--<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>-->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 
 
@@ -16,6 +17,21 @@
     <!--<link rel="stylesheet" href="node_modules/device-mockups/device-mockups.min.css">-->
     <link rel="stylesheet" href="node_modules/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="node_modules/angular-material/angular-material.css">
+
+    <link rel='stylesheet' href='node_modules/mdbootstrap/css/mdb.min.css'>
+
+
+    <link rel='stylesheet' href='node_modules/angular-jk-rating-stars/dist/jk-rating-stars.min.css'>
+    <link rel='stylesheet' href='node_modules/sweetalert/dist/sweetalert.css'>
+    <!--<link rel="stylesheet" href="node_modules/device-mockups/device-mockups.min.css">-->
+
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--<link rel='stylesheet' href='node_modules/angular-material/angular-material.min.css'>-->
+    <!--<link rel='stylesheet' href='node_modules/angular-material/modules/js/icon/icon.css'>-->
+    <link rel="stylesheet" href="node_modules/simple-line-icons/css/simple-line-icons.css">
+    <link rel="stylesheet" href="node_modules/angular-material/angular-material.css">
+
     <script src="node_modules/lodash/lodash.min.js"></script>
     <script src="node_modules/angular/angular.js" ></script>
     <script src="node_modules/angular-sanitize/angular-sanitize.min.js"></script>
@@ -29,6 +45,11 @@
     <script src="node_modules/angular-animate/angular-animate.js" ></script>
     <script src="node_modules/angular-material/angular-material.js" ></script>
 
+    <script src="node_modules/tether/dist/js/tether.js" ></script>
+
+    <script src="node_modules/mdbootstrap/js/mdb.js" ></script>
+    <script src="node_modules/angular-jk-rating-stars/dist/jk-rating-stars.js" ></script>
+    <script src="node_modules/sweetalert/dist/sweetalert.min.js" ></script>
 
 
     <link rel="stylesheet" type="text/css" href="build/css/generatedStyles.scss">
@@ -41,6 +62,7 @@
 
 <navheader></navheader>
 <br /><br /><br /><br />
+<body>
 
 
 </body>
