--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -62,6 +62,8 @@
 
 <navheader></navheader>
 <br /><br /><br /><br />
+<img src='../../../resources/img/im.jpg' style='position:fixed;top:0px;left:0px;width:100%;height:100%;z-index:-1;opacity: 0.4;'>
+
 <body>
 
 
