--- a/src/main/webapp/resources/js/directives/NavHeader.html
+++ b/src/main/webapp/resources/js/directives/NavHeader.html
@@ -7,24 +7,39 @@
 
             <ul class="nav navbar-nav">
 
-                <li class="nav-item active">
-                    <a  class="nav-link" ng-href="#">Home</a>
+                <!--<li class="nav-item active">-->
+                    <!--<a  class="nav-link" ng-href="#">Home</a>-->
+                <!--</li>-->
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><b>LEARNING CENTER</b><span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+
+                        <li><a a-href="#/">What is Forex</a></li>
+
+                        <li><a ng-href="#/">What this site will teach you</a></li>
+
+                        <li><a ng-href="#/">Financial Management</a></li>
+
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Something</a></li>
+                    </ul>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" ng-href="#/logreg">Access Site</a>
+                    <a class="nav-link" ng-href="#/logreg"><b>Access Site</b></a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" ng-href="#/pairs">Current Forex Prices</a>
+                    <a class="nav-link" ng-href="#/pairs">Live FOREX</a>
                 </li>
 
                 <li class="nav-item">
-                    <a ng-show='$root.loggedIn' class="nav-link" ng-href="#/allUsers">All Users</a>
+                    <a ng-show='$root.loggedIn' class="nav-link" ng-href="#/allUsers">Player List</a>
                 </li>
 
                 <li class="nav-item">
-                    <a ng-show='$root.loggedIn' class="nav-link" ng-href="#/onlineUsers">Who's Online Now</a>
+                    <a ng-show='$root.loggedIn' class="nav-link" ng-href="#/onlineUsers">Who's Online?</a>
                 </li>
 
                 <li class="nav-item">
