All variables and controller relating to current user optomized and streamlined login and register displays a message welcoming the user user is logged immediately after registration available balance in the trade summary header adjusted to update in real time

--- a/src/main/webapp/resources/js/directives/NavHeader.html
+++ b/src/main/webapp/resources/js/directives/NavHeader.html
@@ -62,7 +62,8 @@
 
                 </li>
                 <li class="nav-item " ng-show='$root.loggedIn' >
-                    <a ng-show="$root.loggedIn" class="nav-link" ng-href="#">{{currentUser.firstName}} Signed In</a>
+
+                    <a ng-show="$root.loggedIn" class="nav-link" ng-href="#">{{$root.currentUser.firstName}} Signed In</a>
                 </li>
                 <li>
                     <a ng-show="$root.loggedIn" class="nav-link" ng-click="logOutUser()">Log Out</a>
