Challenge notification implpemented

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,6 +23,7 @@
 
     <link rel='stylesheet' href='node_modules/angular-jk-rating-stars/dist/jk-rating-stars.min.css'>
     <link rel='stylesheet' href='node_modules/sweetalert/dist/sweetalert.css'>
+    <link rel="stylesheet" href="node_modules/snackbarjs/dist/snackbar.css">
     <!--<link rel="stylesheet" href="node_modules/device-mockups/device-mockups.min.css">-->
 
 
@@ -51,9 +52,11 @@
     <script src="node_modules/angular-jk-rating-stars/dist/jk-rating-stars.js" ></script>
     <script src="node_modules/sweetalert/dist/sweetalert.min.js" ></script>
 
+    <script src="node_modules/snackbarjs/dist/snackbar.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="build/css/generatedStyles.scss">
     <script src = "build/js/generatedScripts.js"></script>
+
 
 
 </head>
