--- a/src/main/webapp/resources/js/directives/NavHeader.html
+++ b/src/main/webapp/resources/js/directives/NavHeader.html
@@ -50,9 +50,15 @@
                     <a ng-show='$root.loggedIn' class="nav-link" ng-href="#/trade/0">Trade</a>
                 </li>
 
-                <li class="nav-item">
-                    <a ng-show='$root.loggedIn' class="nav-link" ng-href="#/openChallenges">Challenges</a>
+                <li  class="nav-item">
+                    <a ng-show='$root.loggedIn && $root.liveChallenge' class="nav-link" ng-href="#/openChallenges"><i class="glyphicon glyphicon-bell"> <span class="label label-danger">{{openChallengesCount}}</span></i>Challenges</a>
                 </li>
+                <li  class="nav-item">
+                    <a ng-show='$root.loggedIn && !$root.liveChallenge' class="nav-link" ng-href="#/openChallenges">Challenges</a>
+                </li>
+                <!--<li  class="nav-item">-->
+                    <!--<a ng-show='$root.loggedIn' class="nav-link" ng-href="#/openChallenges"><i class="glyphicon glyphicon-bell"> <span class="label label-danger">{{openChallengesCount}}</span></i>Challenges</a>-->
+                <!--</li>-->
 
             </ul>
 
@@ -63,7 +69,7 @@
                 </li>
                 <li class="nav-item " ng-show='$root.loggedIn' >
 
-                    <a ng-show="$root.loggedIn" class="nav-link" ng-href="#">{{$root.currentUser.firstName}} Signed In</a>
+                    <a ng-show="$root.loggedIn" class="nav-link" ng-href="#">Hi {{$root.currentUser.firstName}}!</a>
                 </li>
                 <li>
                     <a ng-show="$root.loggedIn" class="nav-link" ng-click="logOutUser()">Log Out</a>
