--- a/src/main/webapp/resources/js/directives/NavHeader.html
+++ b/src/main/webapp/resources/js/directives/NavHeader.html
@@ -3,16 +3,12 @@
 
 <div class="container-fluid">
 <navbar class="navbar navbar-inverse bg-inverse navbar-fixed-top " id="my-navbar">
-        <a class="navbar-brand" ng-href="#">Forex Fighter</a>
+        <a class="navbar-brand" ng-href="#home">Forex Gym</a>
 
         <ul class="collapse navbar-collapse" id="navbar-collapse">
 
 
             <ul class="nav navbar-nav">
-
-                <!--<li class="nav-item active">-->
-                    <!--<a  class="nav-link" ng-href="#">Home</a>-->
-                <!--</li>-->
 
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><b>LEARNING CENTER</b><span class="caret"></span></a>
