lots of changes to CHallenge logic and implementation

--- a/src/main/webapp/resources/js/directives/NavHeader.html
+++ b/src/main/webapp/resources/js/directives/NavHeader.html
@@ -50,9 +50,9 @@
                 <li  class="nav-item">
                     <a ng-show='$root.loggedIn && $root.liveChallenge' class="nav-link" ng-href="#/openChallenges"><i class="glyphicon glyphicon-bell" style="color:red"> <span class="label label-danger">{{$root.openChallengesCount}}</span></i>Challenges</a>
                 </li>
-                <li  class="nav-item">
-                    <a ng-show='$root.loggedIn && !$root.liveChallenge' class="nav-link" ng-href="#/openChallenges">Challenges</a>
-                </li>
+                <!--<li  class="nav-item">-->
+                    <!--<a ng-show='$root.loggedIn && $root.liveChallenge' class="nav-link" ng-href="#/openChallenges">Challenges</a>-->
+                <!--</li>-->
                 <!--<li  class="nav-item">-->
                     <!--<a ng-show='$root.loggedIn' class="nav-link" ng-href="#/openChallenges"><i class="glyphicon glyphicon-bell"> <span class="label label-danger">{{openChallengesCount}}</span></i>Challenges</a>-->
                 <!--</li>-->
