finishes ui changes for the afternoon removd all users view (no need for it) added images in the summary ection

--- a/src/main/webapp/resources/js/directives/NavHeader.html
+++ b/src/main/webapp/resources/js/directives/NavHeader.html
@@ -31,9 +31,9 @@
                     <a class="nav-link" ng-href="#/pairs">Live FOREX</a>
                 </li>
 
-                <li class="nav-item">
-                    <a ng-show='$root.loggedIn' class="nav-link" ng-href="#/allUsers">Player List</a>
-                </li>
+                <!--<li class="nav-item">-->
+                    <!--<a ng-show='$root.loggedIn' class="nav-link" ng-href="#/allUsers">Player List</a>-->
+                <!--</li>-->
 
                 <li class="nav-item">
                     <a ng-show='$root.loggedIn' class="nav-link" ng-href="#/onlineUsers">Who's Online?</a>
