username, password and email all checked for validation

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -53,6 +53,7 @@
     <script src="node_modules/sweetalert/dist/sweetalert.min.js" ></script>
 
     <script src="node_modules/snackbarjs/dist/snackbar.min.js"></script>
+    <script src="node_modules/bootstrap-validator/dist/validator.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="build/css/generatedStyles.scss">
     <script src = "build/js/generatedScripts.js"></script>
